# RK2

./: CMakeLists.txt
.github/workflows/: build.yml
include/: dragon.h  goblin.h  monster.h  monster_pool.h  slime.h
src/: dragon.cpp  goblin.cpp  main.cpp  monster_pool.cpp  slime.cpp
tests/: dragon_test.cpp  goblin_test.cpp  monster_pool_test.cpp  slime_test.cpp
